--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Revision history for warnings::unused
 
+TODO:
+	* 1.00 - change the implementation based on PL_peepp
+
+0.02 Fri Sep 26 13:14:44 2008
+	- change to work as a lexical pragma (RT 39508)
+	- fix a segv (RT 39563)
+
+
 0.01 Mon Sep 22 09:09:07 2008
 	- change the warning category from 'unused' to 'once'
 	- fix many bugs
