Import of GFUJI/warnings-unused-0.021 from CPAN.
gitpan-cpan-distribution: warnings-unused
gitpan-cpan-version:      0.021
gitpan-cpan-path:         GFUJI/warnings-unused-0.021.tar.gz
gitpan-cpan-author:       GFUJI
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -3,6 +3,10 @@ Revision history for warnings::unused
 TODO:
 	* 1.00 - change the implementation based on PL_peepp
 
+0.021 Sat Oct  4 15:03:44 2008
+	- re-packageing
+	- no code change
+
 0.02 Fri Sep 26 13:14:44 2008
 	- change to work as a lexical pragma (RT 39508)
 	- fix a segv (RT 39563)
