Import of GFUJI/warnings-unused-0.04 from CPAN.
gitpan-cpan-distribution: warnings-unused
gitpan-cpan-version:      0.04
gitpan-cpan-path:         GFUJI/warnings-unused-0.04.tar.gz
gitpan-cpan-author:       GFUJI
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -3,8 +3,11 @@ Revision history for warnings::unused
 TODO:
 	* to be based on PL_peepp?
 
+0.04 Sun Mar  1 11:29:06 2009
+	- fix RT #43716, reported by Kevin Ryde
+
 0.03 Thu Feb 26 16:22:31 2009
-	- fix a multi-scope problem (RT 41639)
+	- fix a multi-scope problem (RT #41639, reported by Kevin Ryde)
 	- update ppport.h
 
 0.021 Sat Oct  4 15:03:44 2008
@@ -12,8 +15,8 @@ TODO:
 	- no code change
 
 0.02 Fri Sep 26 13:14:44 2008
-	- change to work as a lexical pragma (RT 39508)
-	- fix a segv (RT 39563)
+	- change to work as a lexical pragma (RT #39508, reported by Slaven Rezic)
+	- fix a segv (RT #39563, reported by Kevin Ryde)
 
 0.01 Mon Sep 22 09:09:07 2008
 	- change the warning category from 'unused' to 'once'
